# hrpsys-base

./: CMakeLists.txt  hrpsys_tendon.patch
doc/: CMakeLists.txt  Doxyfile.in  package.h
idl/: AccelerationFilterService.idl  CMakeLists.txt  GazeControllerService.idl  RobotHardwareService.idl  TendonJointControllerService.idl
lib/util/: BodyRTC.cpp  BodyRTC.h  CMakeLists.txt
python/: hrpsys_config.py
rtc/: CMakeLists.txt
rtc/AccelerationFilter/: AccelerationFilter.cpp  AccelerationFilter.h  AccelerationFilter.yaml  AccelerationFilterService_impl.cpp  AccelerationFilterService_impl.h  CMakeLists.txt  README.AccelerationFilter
rtc/AutoBalancer/: AutoBalancer.cpp  GaitGenerator.h
rtc/CollisionDetector/: CMakeLists.txt  CollisionDetector.cpp  CollisionDetector.h  FCLCollision.cpp  FCLCollision.h
rtc/DataLogger/: DataLogger.cpp  DataLogger.h
rtc/GazeController/: CMakeLists.txt  GazeController.cpp  GazeController.h  GazeController.txt  GazeControllerComp.cpp  GazeControllerService_impl.cpp  GazeControllerService_impl.h
rtc/ImpedanceController/: JointPathEx.cpp
rtc/KalmanFilter/: KalmanFilter.cpp
rtc/RobotHardware/: RobotHardwareService_impl.cpp  RobotHardwareService_impl.h  robot.cpp  robot.h
rtc/SequencePlayer/: SequencePlayer.cpp  SequencePlayerService_impl.cpp  seqplay.cpp  seqplay.h
rtc/SoftErrorLimiter/: SoftErrorLimiter.cpp
rtc/Stabilizer/: Stabilizer.cpp
rtc/TendonJointController/: CMakeLists.txt  TendonJointController.cpp  TendonJointController.h  TendonJointControllerComp.cpp  TendonJointControllerService_impl.cpp  TendonJointControllerService_impl.h
test/: test-samplerobot.py
